dev/test_programs/INVALID/group1/exp20.go
package main

func main(){
	var x int = 1;
	var y int = 2;
	if y ^& x {
		print("test");
	}
}
